the content of the author in students

--- a/students.html
+++ b/students.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="This is a geek website for future geeks">
-    <meta name="author" content="">
+    <meta name="author" content="the content of the author in students">
 
     <title>Geek &#124; Interactive Programmer ReSkilling</title>
 
