--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
               <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-lg-4">
                   <a class="nav-link text-uppercase text-expanded" href="index.html">Home
+                  </a>
                 </li>
                 <li class="nav-item px-lg-4">
                   <a class="nav-link text-uppercase text-expanded" href="about.html">About</a>
@@ -42,7 +43,7 @@
                 <li class="nav-item px-lg-4 dropdown">
                   <a class="nav-link text-uppercase text-expanded dropdown-toggle" data-toggle="dropdown" href="#">Forms Add/Edit</a>
                   <div class="dropdown-menu nav-item px-lg-4">
-                    <a class="nav-link text-uppercase text-expanded dropdown-item" href="courses.html">Courses</a>
+                    <a class="nav-link text-uppercase  text-expanded dropdown-item" href="courses.html">Courses</a>
                     <a class="nav-link text-uppercase text-expanded dropdown-item" href="trainers.html">Trainers</a>
                     <a class="nav-link text-uppercase text-expanded dropdown-item" href="students.html">Students</a>
                     <a class="nav-link text-uppercase text-expanded dropdown-item" href="assignments.html">Assignments</a>
@@ -59,11 +60,11 @@
                 </li>
                 <li class="nav-item active px-lg-4">
                   <a class="nav-link text-uppercase text-expanded" href="contact.html">Contact</a>
-                  <span class="sr-only">(current)</span></a>
+                  <span class="sr-only">(current)</span>
                 </li>
               </ul>
             </div>
-           </div>
+          </div>
         </nav>
     <!-- End Navigation -->
     <!--Main section-->
