final touches looks good div tags on validation

--- a/students.html
+++ b/students.html
@@ -105,6 +105,9 @@
                               <div class="invalid-feedback">
                                   Please add more than 2 letters.
                               </div>
+                              <div class="valid-feedback">
+                                Looks good!
+                              </div>
                           </div>
                           <div class="col-md-4 mb-3">
                           <label for="validationCustom02">Student Last Name</label>
@@ -204,8 +207,10 @@
                                       <div class="invalid-feedback">
                                         Please provide a date between 01/01/1920 and 01/01/2002.
                                       </div>
+                                      <div class="valid-feedback">
+                                        Looks good!
+                                      </div>
                               </div>
-                             
                               <div class="col-md-4 mb-3">
                               
                               </div>
