--- a/trainers.html
+++ b/trainers.html
@@ -183,6 +183,9 @@
                                 <div class="invalid-feedback">
                                 Please add more than 2 letters.
                                 </div>
+                                <div class="valid-feedback">
+                                  Looks good!
+                                </div>
                             </div>
                         </div>
                         
