--- a/courses.html
+++ b/courses.html
@@ -106,6 +106,9 @@
                               <div class="invalid-feedback">
                                   Please add more than 2 letters.
                               </div>
+                              <div class="valid-feedback">
+                                Looks good!
+                            </div>
                           </div>
                           <div class="col-md-4 mb-3">
                           <label for="validationCustom02">Course Stream</label>
@@ -125,6 +128,9 @@
                               <div class="invalid-feedback">
                               Please add more than 2 letters.
                               </div>
+                              <div class="valid-feedback">
+                                Looks good!
+                            </div>
                           </div>
                       </div>
                       <div class="form-row">
@@ -134,6 +140,9 @@
                                   <div class="invalid-feedback">
                                       Please provide a date between 16/01/2020 and 24/04/2024.
                                   </div>
+                                  <div class="valid-feedback">
+                                    Looks good!
+                                </div>
                           </div>
                           <div class="col-md-4 mb-3">
                               <label for="validationCustom04">End Date</label>
@@ -141,6 +150,9 @@
                                   <div class="invalid-feedback">
                                       Please provide a date between 16/01/2020 and 24/04/2024.
                                   </div>
+                                  <div class="valid-feedback">
+                                    Looks good!
+                                </div>
                           </div>
                           <div class="col-md-4 mb-3">
                           
@@ -174,6 +186,9 @@
                                   <div class="invalid-feedback">
                                       Please add more than 2 letters.
                                   </div>
+                                  <div class="valid-feedback">
+                                    Looks good!
+                                </div>
                               </div>
                               <div class="col-md-4 mb-3">
                               <label for="validationCustom02">Course Stream</label>
@@ -193,6 +208,9 @@
                                   <div class="invalid-feedback">
                                   Please add more than 2 letters.
                                   </div>
+                                  <div class="valid-feedback">
+                                    Looks good!
+                                </div>
                               </div>
                           </div>
                           <div class="form-row">
@@ -202,6 +220,9 @@
                                       <div class="invalid-feedback">
                                           Please provide a date between 16/01/2020 and 24/04/2024.
                                       </div>
+                                      <div class="valid-feedback">
+                                        Looks good!
+                                    </div>
                               </div>
                               <div class="col-md-4 mb-3">
                                   <label for="validationCustom04">End Date</label>
@@ -209,13 +230,11 @@
                                       <div class="invalid-feedback">
                                           Please provide a date between 16/01/2020 and 24/04/2024.
                                       </div>
+                                      <div class="valid-feedback">
+                                        Looks good!
+                                    </div>
                               </div>
                               <div class="col-md-4 mb-3">
-                              <label for="validationCustom05">Zip</label>
-                              <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
-                              <div class="invalid-feedback">
-                                  Please provide a valid zip.
-                              </div>
                               </div>
                           </div>
                           <button class="btn btn-primary btn-sm" type="submit">Update</button>
