fixed small typo in asspspcourse

--- a/assignmentsperstudentpercourse.html
+++ b/assignmentsperstudentpercourse.html
@@ -84,7 +84,7 @@
                 <span class="section-heading-lower">Assignments Per Student Per Course</span>
               </h2>
               <div class="ml-5">
-                <p class="lead">Choose the Course and the Assignment you wish to link:</p>
+                <p class="lead">Choose the Course, the Student and the Assignment you wish to link:</p>
                     <br><!--Check forms-->
                     
                     <!--Form Starts-->
