--- a/about.html
+++ b/about.html
@@ -81,15 +81,15 @@
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex ml-auto rounded">
               <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Blended to Perfection</span>
-                <span class="section-heading-lower">Coffees &amp; Teas</span>
+                <span class="section-heading-upper">Cooperation is key</span>
+                <span class="section-heading-lower">Students &amp; Teachers</span>
               </h2>
             </div>
           </div>
           <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-01.jpg" alt="">
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">We take pride in our work, and it shows. Every time you order a beverage from us, we guarantee that it will be an experience worth having. Whether it's our world famous Venezuelan Cappuccino, a refreshing iced herbal tea, or something as simple as a cup of speciality sourced black coffee, you will be coming back for more.</p>
+              <p class="mb-0">We believe in a cooperative environment, and it shows. Every time you enter the classroom, you become a student and teacher. It will be an experience worth having, with bonds that will last you your whole new career. Whether it's the co-student sitting next to you, or your collaboration in your final project - the spirit is for teamwork where you are both a student and a teacher.</p>
             </div>
           </div>
         </div>
@@ -102,15 +102,15 @@
           <div class="product-item-title d-flex">
             <div class="bg-faded p-5 d-flex mr-auto rounded">
               <h2 class="section-heading mb-0">
-                <span class="section-heading-upper">Delicious Treats, Good Eats</span>
-                <span class="section-heading-lower">Bakery &amp; Kitchen</span>
+                <span class="section-heading-upper">Solid foundation</span>
+                <span class="section-heading-lower">Coursework &amp; Class</span>
               </h2>
             </div>
           </div>
           <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-02.jpg" alt="">
           <div class="product-item-description d-flex ml-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">Our seasonal menu features delicious snacks, baked goods, and even full meals perfect for breakfast or lunchtime. We source our ingredients from local, oragnic farms whenever possible, alongside premium vendors for specialty goods.</p>
+              <p class="mb-0">In class you will have coursework with guidelines that will trigger the geek within you and challenge you to achieve more than you could ever imagine.</p>
             </div>
           </div>
         </div>
@@ -124,14 +124,14 @@
             <div class="bg-faded p-5 d-flex ml-auto rounded">
               <h2 class="section-heading mb-0">
                 <span class="section-heading-upper">From Around the World</span>
-                <span class="section-heading-lower">Bulk Speciality Blends</span>
+                <span class="section-heading-lower">LATEST CODING</span>
               </h2>
             </div>
           </div>
           <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/products-03.jpg" alt="">
           <div class="product-item-description d-flex mr-auto">
             <div class="bg-faded p-5 rounded">
-              <p class="mb-0">Travelling the world for the very best quality coffee is something take pride in. When you visit us, you'll always find new blends from around the world, mainly from regions in Central and South America. We sell our blends in smaller to large bulk quantities. Please visit us in person for more details.</p>
+              <p class="mb-0">With changes in the coding spectrum from the latest hot coding language to updates in frameworks. The need to be up to speed shows in all classes and in the success of the graduates in the labor market out there.</p>
             </div>
           </div>
         </div>
@@ -140,9 +140,10 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2019</p>
+        <p class="m-0 small">Copyright &copy; Geek &#124; Get your Coding On &#124; 2020</p>
       </div>
-    </footer>
+    </footer>  
+
 
     <!-- Core JavaScript -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
