--- a/assignments.html
+++ b/assignments.html
@@ -233,9 +233,10 @@
 
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Copyright &copy; Geek &#124; Get your Coding On &#124; 2020</p>
       </div>
-    </footer>
+    </footer>  
+
 
     <!-- Core JavaScript -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
