--- a/students.html
+++ b/students.html
@@ -217,7 +217,7 @@
                           </div>
                           <button class="btn btn-primary btn-sm" type="submit">Update</button>
                       </form>
-                  </div> <!--NECESSARY-->
+                  </div> <!--END TAB-->
                 </div><!--TAB Content Closing Tag-->
               </div><!--div with ml-5 closes-->
             </div><!--here div ends of cta-inner text-center rounded-->
@@ -247,12 +247,11 @@
         </div>
       </div>
     </section>
-
     <footer class="footer text-faded text-center py-5">
       <div class="container">
-        <p class="m-0 small">Copyright &copy; Your Website 2018</p>
+        <p class="m-0 small">Copyright &copy; Geek &#124; Get your Coding On &#124; 2020</p>
       </div>
-    </footer>
+    </footer>  
 
     <!-- Core JavaScript -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
